feat: Improve autocomplete and add word before caret utility, extracted and modularized redundant code